--- a/src/drive/mate/instructor/SplashScreen.form
+++ b/src/drive/mate/instructor/SplashScreen.form
@@ -78,7 +78,7 @@
                   <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
                   <Component id="lbl" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Component id="jProgressBar" pref="1" max="32767" attributes="0"/>
+                  <Component id="jProgressBar" max="32767" attributes="0"/>
               </Group>
               <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
                   <Component id="jLabel1" alignment="0" pref="352" max="32767" attributes="0"/>
