--- a/src/drive/mate/instructor/LoginScreen.form
+++ b/src/drive/mate/instructor/LoginScreen.form
@@ -44,22 +44,16 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
-                  <EmptySpace pref="243" max="32767" attributes="0"/>
-                  <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="244" max="32767" attributes="0"/>
-              </Group>
-              <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                      <Component id="loginbtn" alignment="0" max="32767" attributes="0"/>
-                      <Component id="PasswordField" alignment="0" max="32767" attributes="0"/>
-                      <Component id="usernameGet" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                          <Component id="loginbtn" alignment="0" max="32767" attributes="0"/>
+                          <Component id="PasswordField" alignment="0" max="32767" attributes="0"/>
+                          <Component id="usernameGet" alignment="0" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <Component id="logolbl" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
-              </Group>
-              <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace max="32767" attributes="0"/>
-                  <Component id="logolbl" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
